; ModuleID = '/home/carl/AnghaBench/libgit2/tests/submodule/extr_status.c_add_submodule_to_index.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/submodule/extr_status.c_add_submodule_to_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_repo = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @add_submodule_to_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_submodule_to_index(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i32, i32* @g_repo, align 4
  %5 = load i8*, i8** %2, align 8
  %6 = call i32 @git_submodule_lookup(i32** %3, i32 %4, i8* %5)
  %7 = call i32 @cl_git_pass(i32 %6)
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @git_submodule_add_to_index(i32* %8, i32 1)
  %10 = call i32 @cl_git_pass(i32 %9)
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @git_submodule_free(i32* %11)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_submodule_lookup(i32**, i32, i8*) #1

declare dso_local i32 @git_submodule_add_to_index(i32*, i32) #1

declare dso_local i32 @git_submodule_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
